alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -86,10 +86,9 @@ text-decoration: underline;
 }
 
 video {
-  height: 600px;
+  height: 500px;
   width: auto;
   margin: 20px;
-  display: block;
 }
 
 .row {
